crates/taskfleet/tests/snapshots/help_json__run_help_json.snap
---
source: crates/taskfleet/tests/help_json.rs
assertion_line: 82
expression: value
---
{
  "schema_version": 1,
  "data": {
    "schema_version_help": 3,
    "command": "taskfleet run",
    "about": "Create, list, show, wait on, cancel, merge, salvage, or reattach a run",
    "aliases": [],
    "hidden": false,
    "deprecated": false,
    "flags": [
      {
        "name": "help",
        "long": "help",
        "short": "h",
        "long_aliases": [],
        "short_aliases": [],
        "help": "Print help",
        "value_names": [],
        "takes_value": false,
        "multiple": false,
        "required": false,
        "is_global": false,
        "hidden": false,
        "deprecated": false,
        "defaults": [],
        "accepted_values": [],
        "accepts_file_paths": false,
        "conflicts_with": [],
        "requires": [],
        "required_unless_present": [],
        "arity": {
          "min": 0,
          "max": 0,
          "repeated": false,
          "multi_value": false,
          "require_equals": false
        }
      },
      {
        "name": "json",
        "long": "json",
        "long_aliases": [],
        "short_aliases": [],
        "help": "Emit one pretty JSON document to stdout. Shorthand for `--output json` to stdout",
        "value_names": [],
        "takes_value": false,
        "multiple": false,
        "required": false,
        "is_global": true,
        "hidden": false,
        "deprecated": false,
        "defaults": [
          "false"
        ],
        "accepted_values": [],
        "accepts_file_paths": false,
        "conflicts_with": [],
        "requires": [],
        "required_unless_present": [],
        "arity": {
          "min": 0,
          "max": 0,
          "repeated": false,
          "multi_value": false,
          "require_equals": false
        }
      },
      {
        "name": "output",
        "long": "output",
        "long_aliases": [],
        "short_aliases": [],
        "help": "Output format. `jsonl` (default) emits one compact JSON envelope per line on stdout — AI-first. `json` emits a single pretty document. `text` emits a human-readable summary. A path-shaped value (`./out.json`, `./out.jsonl`) routes the machine envelope to that file (the format is inferred from the extension)",
        "value_names": [
          "FMT|PATH"
        ],
        "takes_value": true,
        "multiple": false,
        "required": false,
        "is_global": true,
        "hidden": false,
        "deprecated": false,
        "defaults": [
          "jsonl"
        ],
        "accepted_values": [
          "json",
          "jsonl",
          "text"
        ],
        "accepts_file_paths": true,
        "conflicts_with": [],
        "requires": [],
        "required_unless_present": [],
        "arity": {
          "min": 1,
          "max": 1,
          "repeated": false,
          "multi_value": false,
          "require_equals": false
        }
      }
    ],
    "positionals": [],
    "subcommands": [
      {
        "command": "taskfleet run cancel",
        "about": "Cancel a run (all live nodes → `run.status: cancelled`), or a single live node with `--node <id>` (branch-preserving; the run stays live while siblings run and the supervisor rolls it up once every node settles). Idempotent",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run create",
        "about": "Create a new run. Top-level when `--parent-*` flags are absent, child-spawn when both are set (mutually required)",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run list",
        "about": "List runs on disk",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run merge",
        "about": "Merge a worktree run's branch back to its source, then submit the terminal `node.report` so the supervisor winds the run down and tears the worktree/window/branch down. Owns the full merge lifecycle: rebase + merge (via the bundled merge backend) AND the report, in one call",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run reattach",
        "about": "Restart the run's supervisor process. Refuses if the recorded supervisor PID is still alive. Spawns `taskfleet supervise <run-id>` detached with stdout/stderr → `supervisor.stderr.log`",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run salvage",
        "about": "Salvage a stuck single-worker run: fence its prior worker (verifying identity first) and drive `run merge` from the preserved worktree's current git state — the fenced manual finish for an `attention-required` run (a worker that exited cleanly but skipped `run merge`) or a `failed` run whose branch was preserved. Refuses an already-`done`/`cancelled` run, a multi-node run, a run with no preserved worktree/branch, and a live worker it cannot safely fence",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run show",
        "about": "Show one run's manifest and counters. Pass an id, or use `--current` inside a worker worktree to resolve its exact owning run from durable node ownership metadata (never from the branch's short run-id prefix)",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      },
      {
        "command": "taskfleet run wait",
        "about": "Block until one or more runs reach a terminal state (`done | failed | cancelled`) and emit a structured summary, so callers stop hand-rolling `run show` poll loops. Read-only: never mutates run state. Exit codes: `0` condition met, `1` usage/unknown run, `2` timeout, `3` (`--fail-on-error`) a settled run failed",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "has_subcommands": false
      }
    ]
  },
  "warnings": []
}
